--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -56,7 +56,7 @@
               <manifest>
                 <addClasspath>true</addClasspath>
                 <!-- Here we specify where the main method can be found -->
-                <mainClass>nl.um.App</mainClass>
+                <mainClass>nl.um.dacs.App</mainClass>
               </manifest>
             </archive>
           </configuration>
